# FactoryPattern

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: Factory.h  Game.h  GameAgent.h  GameFactory.h  Tank.h
src/: Game.cpp  GameFactory.cpp  Tank.cpp  main.cpp
test/: test_GameFactory.cpp  test_Tank.cpp
